--- a/style.css
+++ b/style.css
@@ -130,7 +130,7 @@ header ul li a:hover{
 
 .poster-inner img {
   width: 100%;
-  height: 500px;
+  height: auto;
   position: absolute;
   z-index: -1;
   margin-top: -16px;
