--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ p {
   background-color: #E7E6E1;
 }
 .nav li.active a {
-  background-color: #F7F6E7;
+  background-color: #E7E6E1;
 }
 .nav:hover li {
   height: 60px;
