--- a/style.css
+++ b/style.css
@@ -136,7 +136,7 @@ header ul li a:hover{
   margin-top: 250px;
   padding: 5px;
   border:none;
-  background-color: rgba(245,65,100,0.5);
+  background-color: #537791;
   font-size: 40px;
   width: 50px;
   color: white;
@@ -149,7 +149,7 @@ header ul li a:hover{
   margin-top: 250px;
   padding: 5px;
   border:none;
-  background-color: rgba(245,65,100,0.5);
+  background-color: #537791;
   color: white;
   font-size: 40px;
   width: 50px;
