--- a/style.css
+++ b/style.css
@@ -236,11 +236,11 @@ header ul li a:hover{
 .center {
   background-color: #F7F6E7;
   width: 100%;
-  height: 520px;
   margin: 0 auto;
   margin-top: 0px;
   clear: both;
   color: #537791;
+  padding-bottom: 60px;
 }
 
 .box {
@@ -341,6 +341,7 @@ header ul li a:hover{
   min-height: 503px;
   margin: 0 auto;
   background-color: #F7F6E7;
+  padding-bottom: 40px;
 }
 
 .team h2 {
