change the color

--- a/style.css
+++ b/style.css
@@ -252,7 +252,7 @@ header ul li a:hover{
 }
 
 .box h2 {
-  color: aliceblue;
+  color: #537791;
   margin: 10px 0px 10px 5px;
   letter-spacing: 1.5px;
   font-size: 30px;
@@ -345,7 +345,7 @@ header ul li a:hover{
 }
 
 .team h2 {
-  color: aliceblue;
+  color: #537791;
   padding: 4px;
   font-size: 25px;
   float: right;
