--- a/style.css
+++ b/style.css
@@ -412,6 +412,7 @@ header ul li a:hover{
   color: #efeeed;
   font-size: 21px;
   margin-top: 5px;
+font-family: 'Barlow Semi Condensed', sans-serif;
 }
 
 .social {
