--- a/style.css
+++ b/style.css
@@ -2,11 +2,11 @@
 /*     Global     */
 /******************/
 
-*{
+* {
   margin: 0;
   padding: 0;
 }
-body{
+body {
   overflow-x: hidden;
   font-family: 'Barlow', sans-serif;
 }
@@ -34,6 +34,7 @@ a {
   display: inline-block;
   padding: 10px 30px;
 }
+
 /******************/
 /*     Header     */
 /******************/
@@ -46,21 +47,17 @@ header {
   width: 35%;
   margin: 0 auto;
   padding: 15px 100px 0px 0;
-  margin-left: 50px;
   float: left;
 }
 .logo h2 {
   color: aliceblue;
   font-size: 40px;
-  letter-spacing: 5px;
 }
 .logo p {
   color: aliceblue;
-  letter-spacing: 2px;
 }
 .navigation {
   float: right;
-  margin-right: 50px;
 }
 .nav {
   display: flex;
@@ -148,7 +145,6 @@ header {
 
 .welcome {
   background-color: #E7E6E1;
-  height: 400px;
   padding: 50px 0;
   overflow: hidden;
   color: #537791;
@@ -162,12 +158,10 @@ header {
   font-size: 40px;
   margin-bottom: 30px;
 }
-
 .welcome .texter p {
   font-size: 18px;
-  letter-spacing: 1.4px;
   margin-bottom: 25px;
-  }
+}
 .welcome .img-g {
   width: 40%;
   text-align: center;
@@ -219,11 +213,12 @@ header {
   margin-bottom: 30px;
   font-size: 30px;
 }
+.team .boxes {
+  display: flex;
+  justify-content: space-between;
+}
 .team .boxs {
-  width: 200px;
-  min-height: 100%;
-  float: left;
-  margin-right: 100px;
+  width: 230px;
 }
 .team .boxs img {
   width: 200px;
@@ -247,100 +242,68 @@ header {
 /******************/
 /*     Footer     */
 /******************/
-.foot {
-	width: 100%;
-    height: 140px;
-    margin: 0 auto;
-    background-color: #537791;
+
+footer {
+  margin: 0 auto;
+  background-color: #537791;
+  padding: 30px 0;
 }
-.some {
+footer .some {
   width: 65%;
   min-height: 100%;
   margin: 0 auto;
   float: left;
 }
-.some h2 {
+footer .some h2 {
   color: aliceblue;
-  font-size: 45px;
-  letter-spacing: 6px;
-  margin: 2px;
-  margin-top: 10px;
+  font-size: 40px;
 }
-.some p {
+footer .some p {
   color: white;
-  font-size: 20px;
-  margin-left: 5px;
+  font-size: 16px;
   margin-bottom: 8px;
 }
-.some h3 {
+footer .some h3 a {
   color: #efeeed;
-  font-size: 21px;
+  font-size: 18px;
   margin-top: 5px;
-font-family: 'Barlow Semi Condensed', sans-serif;
+  font-family: 'Barlow', sans-serif;
 }
-.social {
-  width: 100%;
-  min-height:100%;
-  margin: auto;
+footer .social {
+  width: 35%;
+  float: left;
 }
-
-.media {
-  padding-left: 970px;
+footer .media {
+  text-align: right;
 }
-.media i{
+footer .media i {
   color: aliceblue;
-  padding: 20px;
+  padding: 20px 0 20px 20px;
   font-size: 30px;
   margin-top: 12px;
 }
-.ul2 ul {
+footer .ul2 ul {
   display: flex;
+  padding: 0;
+  justify-content: flex-end;
+}
+footer .ul2 ul a {
+  color: aliceblue;
   padding-left: 20px;
 }
-.ul2 ul a{
-  color: aliceblue;
-  padding: 0px 20px 0px 0px;
-}
-.ul2 p{
+footer .ul2 p {
   color: aliceblue;
 }
-.copy {
+footer .copy {
   margin: 20px 0px 20px 965px;
 }
-
-.copy p {
+footer .copy p {
   color: aliceblue;
 }
-.buttom	{
+footer .buttom	{
   background: blue;
   color: white;
   padding: 16px;
   position: absolute;
   z-index: 100;
 }
-#im-1 {
-  width: 230px;
-  min-height: 230px;
-  border-radius: 100%;
-  z-index: 2;
-  margin: 0px 40px 5px 200px;
-}
-
-#im-2 {
-  width: 200px;
-  min-height: 200px;
-  border-radius: 100%;
-  z-index: 3;
-  margin: -80px 40px 5px 300px;
-}
-
-#im-3 {
-  width: 190px;
-  min-height: 190px;
-  border-radius: 100%;
-  z-index: 1;
-  position: relative;
-  top: -250px;
-  left: 50px;
-}
-/*---------------The End------------*/
